Fixed the reference urls to CSS and JS files.  Changes to be committed: 	modified:   backup/src-theme-static/feeds.html 	modified:   backup/src-theme-static/instafeed.html 	modified:   backup/src-theme-static/logOrSign.html 	modified:   backup/src-theme-static/management.html 	modified:   backup/src-theme-static/members.html 	modified:   backup/src-theme-static/projects.html 	modified:   backup/src-theme-static/puzzle.html

--- a/backup/src-theme-static/management.html
+++ b/backup/src-theme-static/management.html
@@ -11,7 +11,7 @@
 		  <meta name="author" content="Mohit Chawla, Kriti Singh"/>
   		  <meta http-equiv="content-type" content="text/html" charset="utf-8"/>
   		  <meta http-equiv="X-UA-Compatible" content="IE=9" />
-  		  <link rel="shortcut icon" href="img/favico.png" type="image/png">
+  		  <link rel="shortcut icon" href="assets/img/favico.png" type="image/png">
   		  <meta http-equiv="X-UA-Compatible" content="chrome=1" />
   		  <meta name="description" content="Cyber Labs | Indian School Of Mines"/>
   		  <meta name="keywords" content="Cyber Labs,Cyber Labs ISM,Cyber Society,Cyber Labs India,Mohit Chawla,Kriti Singh,MIT Media Lab"/>
@@ -33,7 +33,7 @@
           
           <!-- Latest compiled and minified CSS -->
 			  <!--<link rel="alternative stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
-              <link rel="/css/bootstrap.min.css">
+              <link rel="assets//css/bootstrap.min.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
         <div class="header-margin">
 
             <div class="logo">
-                <img src="img/favico.png" width="60px" height="60px" style="float:left;padding-top:10px;" />
+                <img src="assets/img/favico.png" width="60px" height="60px" style="float:left;padding-top:10px;" />
                 <a href="index" style="padding-left: 15px;">Cyber Labs</a>
             </div>
             <ul class="header-nav">
@@ -174,21 +174,21 @@
      <div class="row">
        <div class="col-lg-12 col-md-12 col-sm-12">
            <div class="col-lg-2 col-lg-offset-2 col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 col-xs-12">
-               <img src="img/kalyan_sir.jpg" class="img-responsive img-center circular-img" style="border-radius: 50%;">
+               <img src="assets/img/kalyan_sir.jpg" class="img-responsive img-center circular-img" style="border-radius: 50%;">
                <center>
                  <h4 class="person-name">Dr. Kalyan Chatterjee</h4>  
                   <h6 class="person-position">President</h6>
                </center>
            </div>
            <div class="col-lg-2 col-lg-offset-1  col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-xs-12">
-               <img src="img/large/mohit.png" class="img-responsive img-center circular-img" style="border-radius: 50%;">
+               <img src="assets/img/large/mohit.png" class="img-responsive img-center circular-img" style="border-radius: 50%;">
                <center>
                  <h4 class="person-name">Mohit Chawla</h4>  
                 <h6 class="person-position">Senior Secretary</h6>
                </center>
            </div>
            <div class="col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-xs-12">
-               <img src="img/jsec.jpg" class="img-responsive img-center circular-img" style="border-radius: 50%;">
+               <img src="assets/img/jsec.jpg" class="img-responsive img-center circular-img" style="border-radius: 50%;">
                <center>
                  <h4 class="person-name">Kriti Singh</h4>  
                   <h6 class="person-position">Secretary</h6>
@@ -199,7 +199,7 @@
        </div>
        <div class="col-lg-12 col-md-12 col-sm-12">
        <div class="col-lg-2 col-lg-offset-5  col-md-2 col-md-offset-5 col-sm-2 col-sm-offset-5 col-xs-12">
-           <img src="img/large/prabodhS.jpg" class="img-responsive img-center circular-img" style="border-radius: 50%;">
+           <img src="assets/img/large/prabodhS.jpg" class="img-responsive img-center circular-img" style="border-radius: 50%;">
            <center>
              <h4 class="person-name">Prabodh Tripathi</h4>  
             <h6 class="person-position">Joint Secretary</h6>
@@ -209,25 +209,32 @@
 
      </div>
    </div>
-   <?php
-   drawFooter();
+<!--Footer-->
+<footer id="footer-box">
+    <div class="footer-margin">
+      <div class="copyright" id="footer-left">© Copyright 2016 cyberlabs.club. All Rights Reserved.</div>
+    </div>
+    <p class="developer-details" style="text-align:right; width:95%;">Developed by
+      <a href="http://mohitchawla.in/">eM</a> |
+      <a href="https://www.facebook.com/kriti96.singh">Kay</a>
+    </p>
 
-   ?>
+  </footer>
 
 
 
  <!--Scripts-->
 
-   <script src="js/jquery.min.js"></script>
-  <script src="js/jquery.easing.min.js"></script>
-  <script src="js/modernizr.custom.42534.js" type="text/javascript"></script>
-   <script src="js/jquery.waitforimages.js" type="text/javascript"></script>
-   <script src="js/typed.js" type="text/javascript"></script>
-   <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>  
-   <script src="js/imagesloaded.pkgd.min.js" type="text/javascript"></script>    
-   <script src="js/jquery.jkit.1.2.16.min.js"></script>
+   <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.easing.min.js"></script>
+  <script src="assets/js/modernizr.custom.42534.js" type="text/javascript"></script>
+   <script src="assets/js/jquery.waitforimages.js" type="text/javascript"></script>
+   <script src="assets/js/typed.js" type="text/javascript"></script>
+   <script src="assets/js/masonry.pkgd.min.js" type="text/javascript"></script>  
+   <script src="assets/js/imagesloaded.pkgd.min.js" type="text/javascript"></script>    
+   <script src="assets/js/jquery.jkit.1.2.16.min.js"></script>
   
-   <script src="js/script.js" type="text/javascript"></script>
+   <script src="assets/js/script.js" type="text/javascript"></script>
    
   <script>
      $('#button').on('click', function() {
