--- a/backup/src-theme-static/feeds.html
+++ b/backup/src-theme-static/feeds.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Mohit Chawla, Kriti Singh" />
     <meta http-equiv="content-type" content="text/html" charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
-    <link rel="shortcut icon" href="img/favico.png" type="image/png">
+    <link rel="shortcut icon" href="assets/img/favico.png" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Cyber Labs | Indian School Of Mines" />
     <meta name="keywords" content="Cyber Labs,Cyber Labs ISM,Cyber Society,Cyber Labs India,Mohit Chawla,Kriti Singh,MIT Media Lab"/>
@@ -39,9 +39,9 @@
         crossorigin="anonymous"></script>
     <!--Style-->
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-responsive.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style-responsive.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <!--[if lt IE 9]>
@@ -69,7 +69,7 @@
         <div class="header-margin">
 
             <div class="logo">
-                <img src="img/favico.png" width="60px" height="60px" style="float:left;padding-top:10px;" />
+                <img src="assets/img/favico.png" width="60px" height="60px" style="float:left;padding-top:10px;" />
                 <a href="index" style="padding-left: 15px;">Cyber Labs</a>
             </div>
             <ul class="header-nav">
@@ -191,26 +191,33 @@
   </center>
   
 
-  <?php
-  drawFooter();
+<!--Footer-->
+<footer id="footer-box">
+    <div class="footer-margin">
+      <div class="copyright" id="footer-left">© Copyright 2016 cyberlabs.club. All Rights Reserved.</div>
+    </div>
+    <p class="developer-details" style="text-align:right; width:95%;">Developed by
+      <a href="http://mohitchawla.in/">eM</a> |
+      <a href="https://www.facebook.com/kriti96.singh">Kay</a>
+    </p>
 
-  ?>
+  </footer>
 
 
 
 <!--Scripts-->
 
-  <script src="js/jquery.min.js"></script>
-	<script src="js/jquery.easing.min.js"></script>
-	<script src="js/modernizr.custom.42534.js" type="text/javascript"></script>
-  <script src="js/jquery.waitforimages.js" type="text/javascript"></script>
-  <script src="js/typed.js" type="text/javascript"></script>
-  <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>  
-  <script src="js/imagesloaded.pkgd.min.js" type="text/javascript"></script>    
-  <script src="js/jquery.jkit.1.2.16.min.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.easing.min.js"></script>
+	<script src="assets/js/modernizr.custom.42534.js" type="text/javascript"></script>
+  <script src="assets/js/jquery.waitforimages.js" type="text/javascript"></script>
+  <script src="assets/js/typed.js" type="text/javascript"></script>
+  <script src="assets/js/masonry.pkgd.min.js" type="text/javascript"></script>  
+  <script src="assets/js/imagesloaded.pkgd.min.js" type="text/javascript"></script>    
+  <script src="assets/js/jquery.jkit.1.2.16.min.js"></script>
  
-  <script src="js/script.js" type="text/javascript"></script>
-  <script src="js/instafeed.js" type="text/javascript"></script>
+  <script src="assets/js/script.js" type="text/javascript"></script>
+  <script src="assets/js/instafeed.js" type="text/javascript"></script>
   
   <script type="text/javascript">
     $('#tag-string-input').keydown(function (e) {
