--- a/backup/src-theme-static/instafeed.html
+++ b/backup/src-theme-static/instafeed.html
@@ -11,7 +11,7 @@
 		  <meta name="author" content="Mohit Chawla, Kriti Singh"/>
   		  <meta http-equiv="content-type" content="text/html" charset="utf-8"/>
   		  <meta http-equiv="X-UA-Compatible" content="IE=9" />
-  		  <link rel="shortcut icon" href="img/favico.png" type="image/png">
+  		  <link rel="shortcut icon" href="assets/img/favico.png" type="image/png">
   		  <meta http-equiv="X-UA-Compatible" content="chrome=1" />
   		  <meta name="description" content="Cyber Labs | Indian School Of Mines"/>
   		  <meta name="keywords" content="Cyber Labs,Cyber Labs ISM,Cyber Society,Cyber Labs India,Mohit Chawla,Kriti Singh,MIT Media Lab"/>
@@ -52,7 +52,7 @@
         <div class="header-margin">
 
             <div class="logo">
-                <img src="img/favico.png" width="60px" height="60px" style="float:left;padding-top:10px;" />
+                <img src="assets/img/favico.png" width="60px" height="60px" style="float:left;padding-top:10px;" />
                 <a href="index" style="padding-left: 15px;">Cyber Labs</a>
             </div>
             <ul class="header-nav">
@@ -174,25 +174,32 @@
 
    <div id="ajax-sidebar"></div>
 
-   <?php
-   drawFooter();
+<!--Footer-->
+<footer id="footer-box">
+    <div class="footer-margin">
+      <div class="copyright" id="footer-left">© Copyright 2016 cyberlabs.club. All Rights Reserved.</div>
+    </div>
+    <p class="developer-details" style="text-align:right; width:95%;">Developed by
+      <a href="http://mohitchawla.in/">eM</a> |
+      <a href="https://www.facebook.com/kriti96.singh">Kay</a>
+    </p>
 
-   ?>
+  </footer>
 
 
 
  <!--Scripts-->
 
-   <script src="js/jquery.min.js"></script>
-  <script src="js/jquery.easing.min.js"></script>
-  <script src="js/modernizr.custom.42534.js" type="text/javascript"></script>
-   <script src="js/jquery.waitforimages.js" type="text/javascript"></script>
-   <script src="js/typed.js" type="text/javascript"></script>
-   <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>  
-   <script src="js/imagesloaded.pkgd.min.js" type="text/javascript"></script>    
-   <script src="js/jquery.jkit.1.2.16.min.js"></script>
+   <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.easing.min.js"></script>
+  <script src="assets/js/modernizr.custom.42534.js" type="text/javascript"></script>
+   <script src="assets/js/jquery.waitforimages.js" type="text/javascript"></script>
+   <script src="assets/js/typed.js" type="text/javascript"></script>
+   <script src="assets/js/masonry.pkgd.min.js" type="text/javascript"></script>  
+   <script src="assets/js/imagesloaded.pkgd.min.js" type="text/javascript"></script>    
+   <script src="assets/js/jquery.jkit.1.2.16.min.js"></script>
   
-   <script src="js/script.js" type="text/javascript"></script>
+   <script src="assets/js/script.js" type="text/javascript"></script>
    
   <script>
      $('#button').on('click', function() {
