--- a/backup/src-theme-static/puzzle.html
+++ b/backup/src-theme-static/puzzle.html
@@ -39,9 +39,9 @@
         crossorigin="anonymous"></script>
     <!--Style-->
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-responsive.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style-responsive.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <!--[if lt IE 9]>
@@ -56,12 +56,12 @@
 <body>
     <!--Preloader-->
 
-    <div class="preloader" id="preloader">
+    <!-- <div class="preloader" id="preloader">
         <div class="item">
             <div class="spinner">
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!--Header-->
     <header class="boxed" id="header-white">
@@ -69,7 +69,7 @@
         <div class="header-margin">
 
             <div class="logo">
-                <img src="img/favico.png" width="60px" height="60px" style="float:left;padding-top:10px;" />
+                <img src="assets/img/favico.png" width="60px" height="60px" style="float:left;padding-top:10px;" />
                 <a href="index" style="padding-left: 15px;">Cyber Labs</a>
             </div>
             <ul class="header-nav">
@@ -211,16 +211,16 @@
 
     <!--Scripts-->
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/modernizr.custom.42534.js" type="text/javascript"></script>
-    <script src="js/jquery.waitforimages.js" type="text/javascript"></script>
-    <script src="js/typed.js" type="text/javascript"></script>
-    <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
-    <script src="js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
-    <script src="js/jquery.jkit.1.2.16.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="assets/js/modernizr.custom.42534.js" type="text/javascript"></script>
+    <script src="assets/js/jquery.waitforimages.js" type="text/javascript"></script>
+    <script src="assets/js/typed.js" type="text/javascript"></script>
+    <script src="assets/js/masonry.pkgd.min.js" type="text/javascript"></script>
+    <script src="assets/js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+    <script src="assets/js/jquery.jkit.1.2.16.min.js"></script>
 
-    <script src="js/script.js" type="text/javascript"></script>
+    <script src="assets/js/script.js" type="text/javascript"></script>
 
     <script>
         $('#button, #buttons').on('click', function () {
