--- a/public/index.html
+++ b/public/index.html
@@ -28,16 +28,16 @@
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-    crossorigin="anonymous"></script>
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+    crossorigin="anonymous"></script> -->
   <!--Style-->
 
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/style-responsive.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="assets/css/style-responsive.css"> -->
+  <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
   </head>
   <body>
     <noscript>
@@ -48,14 +48,14 @@
 
       <!--Scripts-->
 
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/jquery.easing.min.js"></script>
-  <script src="assets/js/modernizr.custom.42534.js" type="text/javascript"></script>
-  <script src="assets/js/jquery.waitforimages.js" type="text/javascript"></script>
-  <script src="assets/js/typed.js" type="text/javascript"></script>
-  <script src="assets/js/masonry.pkgd.min.js" type="text/javascript"></script>
-  <script src="assets/js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
-  <script src="assets/js/jquery.jkit.1.2.16.min.js"></script>
-  <script src="assets/js/script.js" type="text/javascript"></script>
+
+  <!-- <script src="assets/js/jquery.easing.min.js"></script> -->
+  <!-- <script src="assets/js/modernizr.custom.42534.js" type="text/javascript"></script> -->
+  <!-- <script src="assets/js/jquery.waitforimages.js" type="text/javascript"></script> -->
+  <!-- <script src="assets/js/typed.js" type="text/javascript"></script> -->
+  <!-- <script src="assets/js/masonry.pkgd.min.js" type="text/javascript"></script> -->
+  <!-- <script src="assets/js/imagesloaded.pkgd.min.js" type="text/javascript"></script> -->
+  <!-- <script src="assets/js/jquery.jkit.1.2.16.min.js"></script> -->
+  <!-- <script src="assets/js/script.js" type="text/javascript"></script> -->
   </body>
 </html>
