--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
   <meta name="theme-color" content="#000000">
-  <title>Cyber Labs | '.$pageTitle.'</title>
+  <title>Cyber Labs</title>
   <meta name="description" content="Cyber Labs ">
   <meta name="keywords" content="innovation, student club, projects, hardware, consulting, students, technology, design">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,7 +34,7 @@
     crossorigin="anonymous"></script> -->
   <!--Style-->
 
-  <link rel="stylesheet" href="assets/css/reset.css">
+  <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- <link rel="stylesheet" href="assets/css/style-responsive.css"> -->
   <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
