--- a/public/index.html
+++ b/public/index.html
@@ -26,16 +26,29 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="format-detection" content="telephone=no" />
   
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+
+  
     <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
   <!-- Latest compiled and minified JavaScript -->
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
     crossorigin="anonymous"></script> -->
   <!--Style-->
+    <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
+    <link rel="stylesheet" href="assets/css/style.css">
 
-  <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
-  <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+    <!-- PACE -->
+    <link rel="stylesheet" href="assets/css/pace-theme-flash.min.css">
+    <script src="assets/js/pace.min.js"></script>
+    <!-- Pace end -->
+    
+
+
+
   <!-- <link rel="stylesheet" href="assets/css/style-responsive.css"> -->
   <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
   </head>
