fetch font over https instead of http

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
-  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,500,600,700,800,900,100,200">
     <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
   <!-- Latest compiled and minified JavaScript -->
