--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 
 
   <link rel="stylesheet" href="assets/css/style-responsive.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
   <body>
     <noscript>
