--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,12 @@
   <meta name="description" content="Cyber Labs ">
   <meta name="keywords" content="innovation, student club, projects, hardware, consulting, students, technology, design">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Mohit Chawla, Kriti Singh" />
   <meta http-equiv="content-type" content="text/html" charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=9" />
   <link rel="shortcut icon" href="assets/img/favico.png" type="image/png">
   <meta http-equiv="X-UA-Compatible" content="chrome=1" />
   <meta name="description" content="Cyber Labs | Indian School Of Mines" />
-  <meta name="keywords" content="Cyber Labs,Cyber Labs ISM,Cyber Society,Cyber Labs India,Mohit Chawla,Kriti Singh,MIT Media Lab"
+  <meta name="keywords" content="Cyber Labs,Cyber Labs ISM,Cyber Society,Cyber Labs India,IIT,Dhanbad,IIT (ISM)"
   />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=9" />
